JNG-6331: Fix TestKit singleton datasource lifecycle and enhance testing infrastructure
Multiple improvements to judo-runtime-core-guice-testkit:

## Core Fixes

### Singleton Datasource Lifecycle (JudoTestExtension.java)
- Fix premature closure of singleton datasources
- Register singleton in root store instead of class-scoped store
- Use NonClosingDatasourceReference wrapper for class-scoped access
- Add getDatasourceFromStore() helper method for proper retrieval

### Dependency Version Alignment (pom.xml)
- Remove explicit Testcontainers version (inherit 1.21.1 from parent)
- Remove explicit PostgreSQL JDBC version (inherit 42.7.4 from parent)
- Ensure consistency with parent dependencyManagement

### JUnit 5 Compliance (ExtensionBasedTest.java)
- Remove illegal static @RegisterExtension fields from @Nested classes
- Convert to instance fields (lines 42, 113, 173, 227)

### Exception Handling
- Replace broad catch(Exception) with IllegalTransactionStateException
  - JudoDatasourceByClassExtension.java (lines 35-44)
  - JudoDatasourceSingletonExtension.java (lines 39-46)
- Fix transaction helpers to rethrow exceptions after rollback
  - JudoDatasourceFixture.java (lines 158-191)
  - Implement rollback-then-rethrow pattern

### DataSource Consistency (JudoRuntimeFixture.java)
- Pass caller-supplied DataSource to JudoHsqldbModule.builder()
- Ensure HSQL uses same DataSource as PostgreSQL

### HashSet Constructor Fix (YugabytedbSQLContainer.java)
- Wrap single Integer with Collections.singleton()
- Add missing import for java.util.Collections

## Environment Variables Mocking

### Null Value Handling (EnvironmentVariableMocker.java)
- Skip null-valued entries in toEnvironmentBlockWindows() loop
- Count only non-null entries in toEnvironmentBlockNix()
- Set correct envc[0] based on actual non-null entries
- Prevent NullPointerException when variables are removed

### Comprehensive Tests
- EnvironmentVariablesTest.java: 30+ tests covering construction,
  immutable/muta