@@ -24,25 +24,14 @@ import org.slf4j.LoggerFactory;
  * @see JudoRuntimeExtension
  * @see JudoDatasourceByClassExtension
  */
-public class JudoTestExtension
-    implements
-        BeforeAllCallback,
-        AfterAllCallback,
-        BeforeEachCallback,
-        AfterEachCallback,
-        ParameterResolver {
+public class JudoTestExtension implements BeforeAllCallback, AfterAllCallback, BeforeEachCallback, AfterEachCallback, ParameterResolver {
 
-    private static final Logger log = LoggerFactory.getLogger(
-        JudoTestExtension.class
-    );
+    private static final Logger log = LoggerFactory.getLogger(JudoTestExtension.class);
 
-    private static final String DATASOURCE_FIXTURE_KEY =
-        "judoDatasourceFixture";
+    private static final String DATASOURCE_FIXTURE_KEY = "judoDatasourceFixture";
     private static final String RUNTIME_FIXTURE_KEY = "judoRuntimeFixture";
-    private static final String TRANSACTION_HANDLING_KEY =
-        "transactionHandling";
-    private static final String SINGLETON_DATASOURCE_KEY =
-        "singletonDatasource";
+    private static final String TRANSACTION_HANDLING_KEY = "transactionHandling";
+    private static final String SINGLETON_DATASOURCE_KEY = "singletonDatasource";
 
     // Singleton datasource shared across all tests (for SINGLETON mode)
     private static volatile CloseableDatasourceFixture singletonDatasource;
@@ -50,17 +39,12 @@ public class JudoTestExtension
     @Override
     public void beforeAll(ExtensionContext context) throws Exception {
         // Check if @JudoTest is on the class level
-        JudoTest classAnnotation = context
-            .getRequiredTestClass()
-            .getAnnotation(JudoTest.class);
+        JudoTest classAnnotation = context.getRequiredTestClass().getAnnotation(JudoTest.class);
         if (classAnnotation != null) {
             // Initialize datasource at class level for class-level annotations
             // Use BY_CLASS or SINGLETON mode as specified
             JudoTest.DataSourceMode mode = classAnnotation.dataSourceMode();
-            if (
-                mode == JudoTest.DataSourceMode.BY_CLASS ||
-                mode == JudoTest.DataSourceMode.SINGLETON
-            ) {
+            if (mode == JudoTest.DataSourceMode.BY_CLASS || mode == JudoTest.DataSourceMode.SINGLETON) {
                 initializeDatasource(context, classAnnotation);
             }
             // For BY_METHOD mode with class-level annotation,
@@ -78,10 +62,7 @@ public class JudoTestExtension
      * Initializes the datasource fixture based on the datasource mode.
      * Can be called from beforeAll (for class-level @JudoTest) or beforeEach (for method-level @JudoTest).
      */
-    private void initializeDatasource(
-        ExtensionContext context,
-        JudoTest annotation
-    ) throws Exception {
+    private void initializeDatasource(ExtensionContext context, JudoTest annotation) throws Exception {
         ExtensionContext.Store store = getStore(context);
 
         // Check if already initialized
@@ -98,42 +79,30 @@ public class JudoTestExtension
                 if (singletonDatasource == null) {
                     synchronized (JudoTestExtension.class) {
                         if (singletonDatasource == null) {
-                            JudoDatasourceFixture datasourceFixture =
-                                createDatasourceFixture(annotation);
-                            singletonDatasource =
-                                new CloseableDatasourceFixture(
-                                    datasourceFixture
-                                );
-                            log.info(
-                                "Created SINGLETON datasource shared across all test classes (dialect: {}, container: {})",
-                                annotation.dialect(),
-                                annotation.container()
-                            );
+                            JudoDatasourceFixture datasourceFixture = createDatasourceFixture(annotation);
+                            singletonDatasource = new CloseableDatasourceFixture(datasourceFixture);
+                            log.info("Created SINGLETON datasource shared across all test classes (dialect: {}, container: {})", annotation.dialect(), annotation.container());
+
+                            // Register singleton in root store for cleanup at JVM/test-run end
+                            ExtensionContext.Store rootStore = context.getRoot().getStore(ExtensionContext.Namespace.create(getClass(), "singleton"));
+                            rootStore.put(SINGLETON_DATASOURCE_KEY, singletonDatasource);
+                            log.debug("Registered SINGLETON datasource in root store for cleanup at test-run end");
                         }
                     }
                 }
                 datasourceToUse = singletonDatasource;
-                log.debug(
-                    "Using SINGLETON datasource for: {}",
-                    context.getRequiredTestClass().getSimpleName()
-                );
-                break;
+                log.debug("Using SINGLETON datasource for: {}", context.getRequiredTestClass().getSimpleName());
+
+                // Store a non-closing reference wrapper in class-scoped store
+                store.put(DATASOURCE_FIXTURE_KEY, new NonClosingDatasourceReference(singletonDatasource));
+                return; // Exit early - we've stored the non-closing reference
             case BY_CLASS:
             case BY_METHOD:
             default:
                 // Create new datasource
-                JudoDatasourceFixture datasourceFixture =
-                    createDatasourceFixture(annotation);
-                datasourceToUse = new CloseableDatasourceFixture(
-                    datasourceFixture
-                );
-                log.debug(
-                    "Created {} datasource for: {} (dialect: {}, container: {})",
-                    mode,
-                    context.getRequiredTestClass().getSimpleName(),
-                    annotation.dialect(),
-                    annotation.container()
-                );
+                JudoDatasourceFixture datasourceFixture = createDatasourceFixture(annotation);
+                datasourceToUse = new CloseableDatasourceFixture(datasourceFixture);
+                log.debug("Created {} datasource for: {} (dialect: {}, container: {})", mode, context.getRequiredTestClass().getSimpleName(), annotation.dialect(), annotation.container());
                 break;
         }
 
@@ -144,8 +113,7 @@ public class JudoTestExtension
      * Creates and configures a datasource fixture from annotation parameters.
      * Configuration priority: environment variables > annotation > defaults
      */
-    private JudoDatasourceFixture createDatasourceFixture(JudoTest annotation)
-        throws Exception {
+    private JudoDatasourceFixture createDatasourceFixture(JudoTest annotation) throws Exception {
         JudoDatasourceFixture datasourceFixture = new JudoDatasourceFixture();
 
         // Resolve dialect: env var > annotation > default (hsqldb)
@@ -167,25 +135,16 @@ public class JudoTestExtension
         }
 
         // Auto-detect: if dialect is postgresql and container is "none", use postgresql container
-        if (
-            "postgresql".equalsIgnoreCase(dialect) &&
-            "none".equalsIgnoreCase(container)
-        ) {
+        if ("postgresql".equalsIgnoreCase(dialect) && "none".equalsIgnoreCase(container)) {
             container = "postgresql";
-            log.debug(
-                "Auto-detected container=postgresql for dialect=postgresql"
-            );
+            log.debug("Auto-detected container=postgresql for dialect=postgresql");
         }
 
         // Configure from resolved values
         datasourceFixture.setDialect(dialect);
         datasourceFixture.setContainer(container);
 
-        log.info(
-            "Creating datasource with dialect={}, container={}",
-            dialect,
-            container
-        );
+        log.info("Creating datasource with dialect={}, container={}", dialect, container);
 
         // Setup and prepare
         datasourceFixture.setupDatabase();
@@ -197,15 +156,11 @@ public class JudoTestExtension
     @Override
     public void beforeEach(ExtensionContext context) throws Exception {
         // Get annotation from method first, then fall back to class
-        JudoTest annotation = context
-            .getRequiredTestMethod()
-            .getAnnotation(JudoTest.class);
+        JudoTest annotation = context.getRequiredTestMethod().getAnnotation(JudoTest.class);
 
         boolean isClassLevel = false;
         if (annotation == null) {
-            annotation = context
-                .getRequiredTestClass()
-                .getAnnotation(JudoTest.class);
+            annotation = context.getRequiredTestClass().getAnnotation(JudoTest.class);
             isClassLevel = true;
         }
 
@@ -232,65 +187,40 @@ public class JudoTestExtension
             // BY_CLASS and SINGLETON already initialized in beforeAll
         }
 
-        CloseableDatasourceFixture closeableDatasource =
-            (CloseableDatasourceFixture) store.get(DATASOURCE_FIXTURE_KEY);
-        JudoDatasourceFixture datasourceFixture =
-            closeableDatasource.datasourceFixture;
+        CloseableDatasourceFixture closeableDatasource = getDatasourceFromStore(store);
+        JudoDatasourceFixture datasourceFixture = closeableDatasource.datasourceFixture;
 
         // Create and initialize runtime fixture
         JudoRuntimeFixture runtimeFixture = new JudoRuntimeFixture();
-        runtimeFixture.prepare(
-            annotation.modelName(),
-            datasourceFixture.getDataSource(),
-            datasourceFixture.getDialect(),
-            annotation.modelSource()
-        );
+        runtimeFixture.prepare(annotation.modelName(), datasourceFixture.getDataSource(), datasourceFixture.getDialect(), annotation.modelSource());
 
         // Instantiate custom modules from annotation
         com.google.inject.Module customModule = createCustomModule(annotation);
 
-        runtimeFixture.init(
-            customModule,
-            context.getTestInstance().orElse(null)
-        );
+        runtimeFixture.init(customModule, context.getTestInstance().orElse(null));
 
         // Handle transaction based on strategy
-        JudoTest.TransactionHandling transactionHandling =
-            annotation.transaction();
+        JudoTest.TransactionHandling transactionHandling = annotation.transaction();
         store.put(TRANSACTION_HANDLING_KEY, transactionHandling);
 
-        if (
-            transactionHandling == JudoTest.TransactionHandling.AUTO_ROLLBACK ||
-            transactionHandling == JudoTest.TransactionHandling.AUTO_COMMIT
-        ) {
+        if (transactionHandling == JudoTest.TransactionHandling.AUTO_ROLLBACK || transactionHandling == JudoTest.TransactionHandling.AUTO_COMMIT) {
             runtimeFixture.beginTransaction();
-            log.debug(
-                "Transaction started for test: {}",
-                context.getDisplayName()
-            );
+            log.debug("Transaction started for test: {}", context.getDisplayName());
         }
 
         store.put(RUNTIME_FIXTURE_KEY, runtimeFixture);
 
-        log.info(
-            "Running test: {} (transaction: {})",
-            context.getDisplayName(),
-            transactionHandling
-        );
+        log.info("Running test: {} (transaction: {})", context.getDisplayName(), transactionHandling);
     }
 
     @Override
     public void afterEach(ExtensionContext context) {
         // Get annotation from method first, then fall back to class
-        JudoTest annotation = context
-            .getRequiredTestMethod()
-            .getAnnotation(JudoTest.class);
+        JudoTest annotation = context.getRequiredTestMethod().getAnnotation(JudoTest.class);
 
         boolean isClassLevel = false;
         if (annotation == null) {
-            annotation = context
-                .getRequiredTestClass()
-                .getAnnotation(JudoTest.class);
+            annotation = context.getRequiredTestClass().getAnnotation(JudoTest.class);
             isClassLevel = true;
         }
 
@@ -299,11 +229,8 @@ public class JudoTestExtension
         }
 
         ExtensionContext.Store store = getStore(context);
-        JudoRuntimeFixture runtimeFixture = (JudoRuntimeFixture) store.get(
-            RUNTIME_FIXTURE_KEY
-        );
-        JudoTest.TransactionHandling transactionHandling =
-            (JudoTest.TransactionHandling) store.get(TRANSACTION_HANDLING_KEY);
+        JudoRuntimeFixture runtimeFixture = (JudoRuntimeFixture) store.get(RUNTIME_FIXTURE_KEY);
+        JudoTest.TransactionHandling transactionHandling = (JudoTest.TransactionHandling) store.get(TRANSACTION_HANDLING_KEY);
 
         if (runtimeFixture != null && transactionHandling != null) {
             // Handle transaction cleanup
@@ -311,44 +238,25 @@ public class JudoTestExtension
                 switch (transactionHandling) {
                     case AUTO_ROLLBACK:
                         runtimeFixture.rollbackTransaction();
-                        log.debug(
-                            "Transaction rolled back for test: {}",
-                            context.getDisplayName()
-                        );
+                        log.debug("Transaction rolled back for test: {}", context.getDisplayName());
                         break;
                     case AUTO_COMMIT:
                         runtimeFixture.commitTransaction();
-                        log.debug(
-                            "Transaction committed for test: {}",
-                            context.getDisplayName()
-                        );
+                        log.debug("Transaction committed for test: {}", context.getDisplayName());
 
                         // Truncate tables if configured
                         if (annotation.truncateTables()) {
-                            CloseableDatasourceFixture closeableDatasource =
-                                (CloseableDatasourceFixture) store.get(
-                                    DATASOURCE_FIXTURE_KEY
-                                );
-                            closeableDatasource.datasourceFixture.truncateTables(
-                                runtimeFixture.modelHolder.getRdbmsModel()
-                            );
-                            log.debug(
-                                "Tables truncated after test: {}",
-                                context.getDisplayName()
-                            );
+                            CloseableDatasourceFixture closeableDatasource = getDatasourceFromStore(store);
+                            closeableDatasource.datasourceFixture.truncateTables(runtimeFixture.modelHolder.getRdbmsModel());
+                            log.debug("Tables truncated after test: {}", context.getDisplayName());
                         }
                         break;
                     case MANUAL:
                         // User is responsible for transaction management
                         // But we still truncate tables if configured
                         if (annotation.truncateTables()) {
-                            CloseableDatasourceFixture closeableDatasource =
-                                (CloseableDatasourceFixture) store.get(
-                                    DATASOURCE_FIXTURE_KEY
-                                );
-                            closeableDatasource.datasourceFixture.truncateTables(
-                                runtimeFixture.modelHolder.getRdbmsModel()
-                            );
+                            CloseableDatasourceFixture closeableDatasource = getDatasourceFromStore(store);
+                            closeableDatasource.datasourceFixture.truncateTables(runtimeFixture.modelHolder.getRdbmsModel());
                         }
                         break;
                     case NONE:
@@ -356,22 +264,14 @@ public class JudoTestExtension
                         break;
                 }
             } catch (Exception e) {
-                log.error(
-                    "Error during transaction cleanup for test: {}",
-                    context.getDisplayName(),
-                    e
-                );
+                log.error("Error during transaction cleanup for test: {}", context.getDisplayName(), e);
             }
 
             // Always call tearDown
             try {
                 runtimeFixture.tearDown();
             } catch (Exception e) {
-                log.error(
-                    "Error during fixture teardown for test: {}",
-                    context.getDisplayName(),
-                    e
-                );
+                log.error("Error during fixture teardown for test: {}", context.getDisplayName(), e);
             }
         }
 
@@ -380,63 +280,36 @@ public class JudoTestExtension
         if (!isClassLevel || mode == JudoTest.DataSourceMode.BY_METHOD) {
             // Remove datasource from store for BY_METHOD mode
             // This triggers cleanup via CloseableResource
-            CloseableDatasourceFixture datasource =
-                (CloseableDatasourceFixture) store.remove(
-                    DATASOURCE_FIXTURE_KEY
-                );
-            if (
-                datasource != null && mode != JudoTest.DataSourceMode.SINGLETON
-            ) {
+            CloseableDatasourceFixture datasource = (CloseableDatasourceFixture) store.remove(DATASOURCE_FIXTURE_KEY);
+            if (datasource != null && mode != JudoTest.DataSourceMode.SINGLETON) {
                 // Close datasource (unless it's singleton)
                 try {
                     datasource.close();
-                    log.debug(
-                        "Closed BY_METHOD datasource for test: {}",
-                        context.getDisplayName()
-                    );
+                    log.debug("Closed BY_METHOD datasource for test: {}", context.getDisplayName());
                 } catch (Exception e) {
-                    log.error(
-                        "Error closing datasource: {}",
-                        e.getMessage(),
-                        e
-                    );
+                    log.error("Error closing datasource: {}", e.getMessage(), e);
                 }
             }
         }
 
-        log.info(
-            "Completed test: {} (transaction: {}, datasource: {})",
-            context.getDisplayName(),
-            transactionHandling,
-            mode
-        );
+        log.info("Completed test: {} (transaction: {}, datasource: {})", context.getDisplayName(), transactionHandling, mode);
     }
 
     @Override
-    public boolean supportsParameter(
-        ParameterContext parameterContext,
-        ExtensionContext extensionContext
-    ) {
+    public boolean supportsParameter(ParameterContext parameterContext, ExtensionContext extensionContext) {
         Class<?> parameterType = parameterContext.getParameter().getType();
-        return (
-            parameterType.equals(JudoRuntimeFixture.class) ||
-            parameterType.equals(JudoDatasourceFixture.class)
-        );
+        return (parameterType.equals(JudoRuntimeFixture.class) || parameterType.equals(JudoDatasourceFixture.class));
     }
 
     @Override
-    public Object resolveParameter(
-        ParameterContext parameterContext,
-        ExtensionContext extensionContext
-    ) {
+    public Object resolveParameter(ParameterContext parameterContext, ExtensionContext extensionContext) {
         Class<?> parameterType = parameterContext.getParameter().getType();
         ExtensionContext.Store store = getStore(extensionContext);
 
         if (parameterType.equals(JudoRuntimeFixture.class)) {
             return store.get(RUNTIME_FIXTURE_KEY);
         } else if (parameterType.equals(JudoDatasourceFixture.class)) {
-            CloseableDatasourceFixture closeable =
-                (CloseableDatasourceFixture) store.get(DATASOURCE_FIXTURE_KEY);
+            CloseableDatasourceFixture closeable = getDatasourceFromStore(store);
             return closeable != null ? closeable.datasourceFixture : null;
         }
 
@@ -444,12 +317,22 @@ public class JudoTestExtension
     }
 
     private ExtensionContext.Store getStore(ExtensionContext context) {
-        return context.getStore(
-            ExtensionContext.Namespace.create(
-                getClass(),
-                context.getRequiredTestClass()
-            )
-        );
+        return context.getStore(ExtensionContext.Namespace.create(getClass(), context.getRequiredTestClass()));
+    }
+
+    /**
+     * Helper method to extract CloseableDatasourceFixture from store,
+     * handling both direct CloseableDatasourceFixture and NonClosingDatasourceReference.
+     */
+    private CloseableDatasourceFixture getDatasourceFromStore(ExtensionContext.Store store) {
+        Object stored = store.get(DATASOURCE_FIXTURE_KEY);
+        if (stored == null) {
+            return null;
+        }
+        if (stored instanceof NonClosingDatasourceReference) {
+            return ((NonClosingDatasourceReference) stored).getDatasourceFixture();
+        }
+        return (CloseableDatasourceFixture) stored;
     }
 
     /**
@@ -459,8 +342,7 @@ public class JudoTestExtension
      * @return A Guice module that combines all custom modules, or an empty module if none specified
      */
     private com.google.inject.Module createCustomModule(JudoTest annotation) {
-        Class<? extends com.google.inject.Module>[] moduleClasses =
-            annotation.modules();
+        Class<? extends com.google.inject.Module>[] moduleClasses = annotation.modules();
 
         if (moduleClasses.length == 0) {
             // No custom modules - return empty module
@@ -468,27 +350,14 @@ public class JudoTestExtension
         }
 
         // Instantiate all custom modules
-        java.util.List<com.google.inject.Module> modules =
-            new java.util.ArrayList<>();
-        for (Class<
-            ? extends com.google.inject.Module
-        > moduleClass : moduleClasses) {
+        java.util.List<com.google.inject.Module> modules = new java.util.ArrayList<>();
+        for (Class<? extends com.google.inject.Module> moduleClass : moduleClasses) {
             try {
-                com.google.inject.Module module = moduleClass
-                    .getDeclaredConstructor()
-                    .newInstance();
+                com.google.inject.Module module = moduleClass.getDeclaredConstructor().newInstance();
                 modules.add(module);
-                log.debug(
-                    "Instantiated custom Guice module: {}",
-                    moduleClass.getName()
-                );
+                log.debug("Instantiated custom Guice module: {}", moduleClass.getName());
             } catch (Exception e) {
-                throw new RuntimeException(
-                    "Failed to instantiate custom Guice module: " +
-                        moduleClass.getName() +
-                        ". Make sure the module has a public no-arg constructor.",
-                    e
-                );
+                throw new RuntimeException("Failed to instantiate custom Guice module: " + moduleClass.getName() + ". Make sure the module has a public no-arg constructor.", e);
             }
         }
 
@@ -503,8 +372,7 @@ public class JudoTestExtension
     /**
      * Wrapper to make JudoDatasourceFixture closeable in JUnit's Store
      */
-    private static class CloseableDatasourceFixture
-        implements ExtensionContext.Store.CloseableResource {
+    private static class CloseableDatasourceFixture implements ExtensionContext.Store.CloseableResource {
 
         private final JudoDatasourceFixture datasourceFixture;
 
@@ -517,6 +385,25 @@ public class JudoTestExtension
             if (datasourceFixture != null) {
                 datasourceFixture.teardownDatasource();
             }
+        }
+    }
+
+    /**
+     * Non-closing wrapper for singleton datasource references.
+     * This wrapper does NOT implement CloseableResource, so JUnit will not auto-close it
+     * when the class-scoped store is cleaned up. The actual singleton is registered in the
+     * root store and will be closed exactly once at test-run end.
+     */
+    private static class NonClosingDatasourceReference {
+
+        private final CloseableDatasourceFixture datasourceFixture;
+
+        NonClosingDatasourceReference(CloseableDatasourceFixture datasourceFixture) {
+            this.datasourceFixture = datasourceFixture;
+        }
+
+        CloseableDatasourceFixture getDatasourceFixture() {
+            return datasourceFixture;
         }
     }
 }
